// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-pagination-item-counts-legacy #render should render as expected (1) 1`] = `
<gux-pagination-buttons-legacy total-pages="0" current-page="0" layout="full">
  <div class="gux-pagination-buttons-container gux-full">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-form-field-text-like label-position="screenreader">
          <template shadowrootmode="open">
            <div class="gux-form-field-container gux-screenreader">
              <div class="gux-form-field-label gux-screenreader">
                <slot name="label">
                </slot>
                <gux-form-field-label-indicator variant="required">
                </gux-form-field-label-indicator>
                <slot name="label-info">
                </slot>
              </div>
              <div class="gux-input-and-error-container">
                <div class="gux-input">
                  <div class="gux-input-container">
                    <slot name="prefix">
                    </slot>
                    <slot name="input">
                    </slot>
                    <slot name="suffix">
                    </slot>
                  </div>
                </div>
                <div role="alert" class="gux-form-field-error">
                  <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
                  </gux-icon>
                  <div class="gux-message">
                    <slot name="error">
                    </slot>
                  </div>
                </div>
                <div class="gux-form-field-help">
                  <div class="gux-message">
                    <slot name="help">
                    </slot>
                  </div>
                </div>
              </div>
            </div>
          </template>
          <label slot="label" for="gux-form-field-input-i">
            Page 0 of 0
          </label>
          <input type="text" slot="input" value="0" id="gux-form-field-input-i">
        </gux-form-field-text-like>
      </div>
      <div>
        of 0
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (2) 1`] = `
<gux-pagination-buttons-legacy total-pages="10" current-page="1" layout="full">
  <div class="gux-pagination-buttons-container gux-full">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-form-field-text-like label-position="screenreader">
          <template shadowrootmode="open">
            <div class="gux-form-field-container gux-screenreader">
              <div class="gux-form-field-label gux-screenreader">
                <slot name="label">
                </slot>
                <gux-form-field-label-indicator variant="required">
                </gux-form-field-label-indicator>
                <slot name="label-info">
                </slot>
              </div>
              <div class="gux-input-and-error-container">
                <div class="gux-input">
                  <div class="gux-input-container">
                    <slot name="prefix">
                    </slot>
                    <slot name="input">
                    </slot>
                    <slot name="suffix">
                    </slot>
                  </div>
                </div>
                <div role="alert" class="gux-form-field-error">
                  <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
                  </gux-icon>
                  <div class="gux-message">
                    <slot name="error">
                    </slot>
                  </div>
                </div>
                <div class="gux-form-field-help">
                  <div class="gux-message">
                    <slot name="help">
                    </slot>
                  </div>
                </div>
              </div>
            </div>
          </template>
          <label slot="label" for="gux-form-field-input-i">
            Page 1 of 10
          </label>
          <input type="text" slot="input" value="1" id="gux-form-field-input-i">
        </gux-form-field-text-like>
      </div>
      <div>
        of 10
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (3) 1`] = `
<gux-pagination-buttons-legacy total-pages="10" current-page="5" layout="full">
  <div class="gux-pagination-buttons-container gux-full">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-form-field-text-like label-position="screenreader">
          <template shadowrootmode="open">
            <div class="gux-form-field-container gux-screenreader">
              <div class="gux-form-field-label gux-screenreader">
                <slot name="label">
                </slot>
                <gux-form-field-label-indicator variant="required">
                </gux-form-field-label-indicator>
                <slot name="label-info">
                </slot>
              </div>
              <div class="gux-input-and-error-container">
                <div class="gux-input">
                  <div class="gux-input-container">
                    <slot name="prefix">
                    </slot>
                    <slot name="input">
                    </slot>
                    <slot name="suffix">
                    </slot>
                  </div>
                </div>
                <div role="alert" class="gux-form-field-error">
                  <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
                  </gux-icon>
                  <div class="gux-message">
                    <slot name="error">
                    </slot>
                  </div>
                </div>
                <div class="gux-form-field-help">
                  <div class="gux-message">
                    <slot name="help">
                    </slot>
                  </div>
                </div>
              </div>
            </div>
          </template>
          <label slot="label" for="gux-form-field-input-i">
            Page 5 of 10
          </label>
          <input type="text" slot="input" value="5" id="gux-form-field-input-i">
        </gux-form-field-text-like>
      </div>
      <div>
        of 10
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (4) 1`] = `
<gux-pagination-buttons-legacy total-pages="0" current-page="0" layout="small">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-spacer">
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (5) 1`] = `
<gux-pagination-buttons-legacy total-pages="10" current-page="1" layout="small">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-spacer">
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (6) 1`] = `
<gux-pagination-buttons-legacy total-pages="10" current-page="5" layout="small">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-spacer">
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (7) 1`] = `
<gux-pagination-buttons-legacy total-pages="0" current-page="0" layout="expanded">
  <div class="gux-pagination-buttons-container gux-expanded">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (8) 1`] = `
<gux-pagination-buttons-legacy total-pages="10" current-page="1" layout="expanded">
  <div class="gux-pagination-buttons-container gux-expanded">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First" disabled="">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous" disabled="">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <button class="gux-pagination-buttons-list-button gux-current">
        1
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        2
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        3
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        4
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        5
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        6
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        7
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        8
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        9
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        10
      </button>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (9) 1`] = `
<gux-pagination-buttons-legacy total-pages="10" current-page="5" layout="expanded">
  <div class="gux-pagination-buttons-container gux-expanded">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="First">
          <gux-icon decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Previous">
          <gux-icon decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <button class="gux-pagination-buttons-list-button gux-target">
        1
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        2
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        3
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        4
      </button>
      <button class="gux-pagination-buttons-list-button gux-current">
        5
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        6
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        7
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        8
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        9
      </button>
      <button class="gux-pagination-buttons-list-button gux-target">
        10
      </button>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost">
        <button title="Next">
          <gux-icon decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button title="Last">
          <gux-icon decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons-legacy>
`;
